# omi-v4

./: .gitignore  ARCHITECTURE.md  COMPARISON.md  CONTEXT.md  PLAN.md  README.md  REFERENCES.md  rust-toolchain.toml
.github/: RELEASING.md
.github/scripts/: discover_firmware_targets.py  setup-ncs-toolchain.sh
.github/workflows/: ci-firmware.yml  ci.yml  release-desktop.yml  release-firmware.yml  release-mobile.yml
app/: .gitignore  .metadata  ARCHITECTURE-desktop.md  ARCHITECTURE-mobile.md  README.md  analysis_options.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/docs/: oauth-connectors.md
app/ios/: Podfile
app/lib/: app_services.dart  main.dart  random_id.dart
app/macos/: Podfile
app/native/hub/: Cargo.toml  rust-toolchain.toml
app/native/hub/.cargo/: config.toml
app/native/hub/src/: approval.rs  brief.rs  byok_tier.rs  call_bridge.rs  capture_policy.rs  chat_router.rs  computer_use.rs  daily_review.rs  dev_gemini.rs  evidence.rs  extraction.rs  facetime_bridge.rs  facetime_page.rs  hosted_search.rs  lib.rs  live_voice.rs  local_ai.rs  mark_video.rs  meeting.rs  meeting_capture.rs  meeting_detector.rs  model_tier.rs  personality.rs  runtime.rs  scan.rs  self_improve.rs  signals.rs  stt.rs  transcription.rs
app/test/: app_services_test.dart  flutter_test_config.dart  widget_test.dart
app/tool/: analyze.sh  check_native_target_dependencies.sh  check_rinf_bindings.sh  generate_rinf_bindings.sh  redact_rinf_bindings.dart
app/web/: index.html
docs/: TODO.md  agent-harnesses.md  ai-and-observability.md  api.md  byok.md  computer-use.md  live-activities.md  meeting-mode-review.md  memory-authority.md  mobile-companion-app.md  mobile-firmware-dfu.md  realtime-voice-abstraction.md
firmware/: ARCHITECTURE.md  BLE_CONTRACTS.md  COMPARISON.md  PROVENANCE.md  README.md  west-rust.yml
firmware/devkit/: CMakeLists.txt  Kconfig  prj_xiao_ble_sense_devkitv1-spisd.conf  prj_xiao_ble_sense_devkitv1.conf  prj_xiao_ble_sense_devkitv2-adafruit.conf
firmware/omi/: CMakeLists.txt  Kconfig  omi.conf  sysbuild.conf
firmware/omi/rust/: CMakeLists.txt  Cargo.toml  omi_rust.h
firmware/omi/rust/src/: battery.rs  button.rs  feedback.rs  framing.rs  haptic.rs  imu_gesture.rs  led.rs  lib.rs
firmware/omi/src/: battery.c  feedback.c  haptic.c  imu.h  imu_gesture.c  led.c  main.c  mic.c  sd_card.c  settings.c  t5838_aad.c
firmware/omi/src/lib/core/: button.c  features.h  settings.h  storage.c  transport.c  transport.h  user_event.h
firmware/omi/src/lib/core/lib/battery/: battery.h
firmware/omi/sysbuild/: ipc_radio.conf  mcuboot.conf
firmware/test/: app.overlay  prj.conf  sysbuild.conf
site/: .gitignore  README.md  pubspec.yaml
site/lib/: app.dart  brand.dart  main.server.dart
site/scripts/: build.sh  serve.sh
site/web/: main.js  styles.css
worker/: .dev.vars.example  .gitignore  biome.json  package.json  tsconfig.json  wrangler.jsonc
worker-rs/: .gitignore  CUTOVER.md  Cargo.toml  PORT_STATUS.md  README.md  wrangler.toml
worker-rs/.cargo/: config.toml
worker-rs/src/: api_keys.rs  asr_logic.rs  assistant_admission.rs  auth.rs  billing.rs  byok_negotiation.rs  byok_pricing.rs  channel_commands.rs  channel_link.rs  conversations.rs  crypto_util.rs  currents.rs  delivery.rs  desktop_auth.rs  entitlement.rs  facetime.rs  glue.rs  inbox_fallback.rs  jsnum.rs  lib.rs  managed_ai.rs  mcp.rs  memory_log.rs  oauth.rs  public_api.rs  rate_limit.rs  rate_limit_lock.rs  routes_ai.rs  routes_channels.rs  routes_keys.rs  routes_memory.rs  routes_public.rs  sendblue.rs  settings.rs  setup_health.rs  speech.rs  stt_admission.rs  stt_logic.rs  vectorize_ffi.rs  voice_logic.rs  (+2 more)
worker-rs/src/routes_memory/: wasm_glue.rs
worker-rs/src/routes_memory/wasm_glue/: projection_sql.rs
worker/migrations/: 0001_initial.sql  0002_memory_and_policy.sql  0003_align_kr_model.sql  0004_saas_foundations.sql  0005_memory_search.sql  0006_desktop_auth.sql  0007_channel_delivery.sql  0008_managed_ai.sql  0009_managed_stt.sql  0010_bound_stt_proxy.sql  0011_stt_acquisition_token.sql  0012_currents.sql  0013_conversations.sql  0014_channel_inbox_dispatch.sql  0015_currents_generation.sql  0016_zkr_sync.sql  0017_zkr_read_projection.sql  0018_praefectus_approval_receipts.sql  0019_oauth_connections.sql  0020_onboarding_profile.sql  0021_memory_vectors.sql  0022_channel_link_codes.sql  0023_currents_crepus.sql  0024_api_keys.sql  0025_byok_price_negotiation.sql  0026_channel_accounts.sql  0027_managed_speech.sql  0028_channel_checkout.sql  0029_memory_authority_log.sql  0030_memory_log_projection.sql  0031_digests.sql
worker/public/: architecture.html  index.html  main.js  mark.js  styles.css
worker/scripts/: build-hub.sh  build-portal.sh  build-web-engine.sh  hub-index.html  hub-llm.js  portal-index.html  push-secrets.sh  run-tests.sh
worker/src/: api-keys.ts  asr.ts  assistant-admission.ts  assistant.ts  auth.ts  billing.ts  byok-negotiation.ts  byok-pricing.ts  channel-checkout.ts  channel-commands.ts  channel-link.ts  channel-signup.ts  channel-voice.ts  conversations.ts  currents.ts  delivery.ts  desktop-auth.ts  digests.ts  embeddings.ts  entitlement.ts  facetime-bridge.ts  facetime-session.ts  facetime.ts  inbox-fallback.ts  index.ts  mcp.ts  memory-log.ts  memory-projection.ts  memory-read.ts  memory-sync.ts  memory-vectors.ts  memory-write.ts  model-tiers.ts  oauth-broker.ts  oauth-proxy.ts  observability.ts  public-api.ts  rate-limit.ts  routes.ts  sendblue.ts  (+8 more)
worker/test/: account.test.ts  api-keys.test.ts  app.test.ts  asr-oauth-proxy.test.ts  assistant-admission.test.ts  assistant.test.ts  byok-negotiation.test.ts  channel-checkout.test.ts  channel-commands.test.ts  currents.test.ts  desktop-auth.test.ts  digests.test.ts  facetime.test.ts  inbox-fallback.test.ts  mcp.test.ts  memory-log.test.ts  memory-migration.test.ts  memory-sync.test.ts  memory-vectors.test.ts  model-tiers.test.ts  observability.test.ts  recall.test.ts  routes.test.ts  sendblue.test.ts  speech.test.ts  stt-admission.test.ts  stt.test.ts  voice-oauth.test.ts  webhooks.test.ts
(+331 files in other folders)
