[package]
name = "omi-v4-api-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
sha2 = { version = "0.10", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }

[dev-dependencies]
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.8", features = ["d1", "http"] }
worker-macros = "0.8"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
strip = true

[lints.clippy]
all = "deny"
