[package]
name = "omi-v4-api-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rsa = { version = "0.9", default-features = false, features = ["sha2", "pem"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
subtle = { version = "2.6", default-features = false }
url = "2"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }

[dev-dependencies]
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.8", features = ["d1", "http"] }
worker-macros = "0.8"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
futures-util = { version = "0.3", default-features = false }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true
# NOTE: do NOT set `strip = true` here. Cargo's strip drops the wasm
# `target_features` custom section, which wasm-bindgen reads to detect the
# `reference-types` feature (enabled via .cargo/config.toml). Without that
# section, worker-build's `--force-enable-abort-handler` step fails with
# "externref table required for catch wrappers". wasm-opt (run by worker-build)
# strips debug info for size afterward, so binary size is unaffected.
strip = false

[lints.clippy]
all = "deny"
