[package]
name = "hub"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rinf = "8.10.0"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rs_ai = "0.2.22"
rs_ai_core = "0.2.21"
rx4 = { version = "0.3.23", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
miniz_oxide = "0.8"
rusqlite = "0.37"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
url = "2"
zkr = "0.3.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "test-util", "time"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
ed25519-dalek = "2"
getrandom = "0.3"
praefectus = "=0.3.0"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
corti-coreaudio = "=0.5.1"

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23.0"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
rs_ai_local = { version = "0.2.21", features = ["foundationmodels"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[profile.release]
strip = "none"
